# geofile-uploader-api

./: .gitignore  README.md
geofile-uploader-go/: README.md  dockerfile  go.mod  go.sum  main.go
geofile-uploader-go/internal/controllers/: file_controller.go
geofile-uploader-go/internal/handlers/: file_handler.go  user_handler.go
geofile-uploader-go/internal/helpers/: file_utils.go
geofile-uploader-go/internal/routes/: routes.go
geofile-uploader-go/internal/services/: firebase.go  gcp_storage.go  pubsub.go
geoprocess-python/: cloudbuild.yaml  pyproject.toml
geoprocess-python/app/: run.py
geoprocess-python/app/services/: gcp_storage.py
geoprocess_python/: main.py  pyproject.toml
geoprocess_python/app/: run.py
geoprocess_python/app/domain/: file_manager.py  file_repo.py  geometry_repo.py  user_email_repo.py  xml_parser.py
geoprocess_python/app/domain/utils/: comvert_to_3d.py  errors.py
geoprocess_python/app/services/: gcp_storage.py
geoprocess_python/app/services/firebase/: auth.py  firebase_manager.py
geoprocess_python/app/services/postgres/: config.py  entities.py
geoprocess_python/app/utils/: errors.py
geoprocess_python/kml_parser/: Cargo.toml
geoprocess_python/kml_parser/src/: lib.rs
geoviewer-streamlit-python/: README.md  main.py  pyproject.toml
geoviewer-streamlit-python/.streamlit/: config.toml
geoviewer-streamlit-python/services/: firebase.py  postgis.py
geoviewer-streamlit-python/styles/: custom.py
geoviewer-streamlit-python/tmp/: ndvi_image.tiff  ndvi_image_02.tiff
geoviewer-streamlit-python/views/: auth.py  map.py  upload.py
kml-file-uploader-go/: README.md  go.mod  go.sum  main.go
kml-file-uploader-go/internal/controllers/: file_controller.go
kml-file-uploader-go/internal/handlers/: file_handler.go
kml-file-uploader-go/internal/helpers/: file_utils.go
kml-file-uploader-go/internal/middleware/: firebase.go
kml-file-uploader-go/internal/models/: file_model.go
kml-file-uploader-go/internal/routes/: routes.go
kml-file-uploader-go/internal/services/: pubsub.go
kml-file-uploader-go/internal/utils/: file_utils.go  gcp_storage.go
