[project]
name = "geoprocess-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastkml>=1.1.0",
    "fiona>=1.10.1",
    "gdal",
    "geoalchemy2>=0.17.1",
    "geopandas>=1.0.1",
    "psycopg2>=2.9.10",
    "pykml>=0.2.0",
    "simplekml>=1.3.6",
    "sqlalchemy>=2.0.39",
]

[tool.uv.sources]
gdal = { path = "dependencies/GDAL-3.10.1-cp310-cp310-win_amd64.whl" }
