[project]
name = "geoviewer-streamlit-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas>=1.0.1",
    "leafmap>=0.42.13",
    "owslib>=0.33.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.39",
]
