[project]
name = "geoviewer-streamlit-python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "email-validator>=2.2.0",
    "gcsfs>=2025.3.2",
    "geopandas>=1.0.1",
    "google-cloud-secret-manager>=2.23.3",
    "leafmap>=0.42.13",
    "localtileserver>=0.10.6",
    "numpy>=2.2.4",
    "owslib>=0.33.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "rasterio>=1.4.3",
    "sqlalchemy>=2.0.39",
    "st-files-connection>=0.1.0",
    "streamlit>=1.44.0",
    "streamlit-extras>=0.6.0",
    "streamlit-folium>=0.25.0",
    "xarray>=2025.4.0",
]
